# hera

./: .gitignore  .gitpod.yml  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MAINTAINERS.md  MEMBERS.md  Makefile  Pipfile  README.md  RELEASE.md  SECURITY.md  USERS.md  VERSION  codecov.yml  conftest.py  mkdocs.yml  mypy.ini  pyproject.toml  python_gen_example.py  setup.cfg  setup.py  tox.ini
.github/: CODEOWNERS  codecov.yml  dependabot.yml  labels.yml  pull_request_template.md  release-drafter.yml  sync-labels.yml
.github/ISSUE_TEMPLATE/: ❓-i-have-a-question.md  🐛-bug-report.md  🚀-feature-request.md
.github/workflows/: cicd.yaml  hera_build.yaml  hera_build_and_publish.yaml  hera_pr.yaml  minimal-labels.yml  pre-release.yml  publish.yml  release-updater.yml  stale.yml  sync-labels.yml
docs/: README.md  conf.py  expr.md  generate.py  hera.rst  hera_getting_started.md  index.md  index.rst  introduction.md  modules.rst  requirements.txt  src.rst  versions.json
docs/api/: shared.md
docs/contributing/: CONTRIBUTING.md  history.md
docs/examples/: about-upstream.md  about-use-cases.md  any_success_all_fail.md  archive-location.md  arguments-artifacts.md  arguments-parameters-from-configmap.md  arguments-parameters.md  artifact-disable-archive.md  artifact-gc-workflow.md  artifact.md  artifact_with_fanout.md  coin_flip.md  coinflip.md  complex_expr.md  conditional.md  container.md  custom_script.md  daemon.md  default_param_overwrite.md  diamond.md  dynamic_fanout.md  dynamic_fanout_container.md  dynamic_fanout_fanin.md  dynamic_fanout_fanin_artifacts.md  env.md  existing_volume.md  gitops.md  global_host.md  global_parameters.md  gpu.md  hello_hera.md  hello_hera_cron.md  input_output.md  internal_wrapper.md  k8s_sa.md  linear.md  lint.md  memoize.md  metrics.md  multiple_dependencies.md  (+20 more)
docs/getting-started/: introduction.md  quick-start.md
docs/overrides/: main.html
docs/user-guides/: best-practices.md  cli.md  core-concepts.md  decorators.md  experimental-features.md  expr.md  hera-tutorial.md  script-annotations.md  script-basics.md  script-constructors.md  script-runner-io.md  scripts.md  suspending.md
docs/walk-through/: about-hera.md  advanced-hera-features.md  advanced-template-features.md  advanced-workflow-features.md  artifacts.md  authentication.md  conditionals.md  dag.md  dags.md  experimental-hera-features.md  hello-world.md  hera-developer-features.md  hera-tour.md  loops.md  parameters.md  pydantic-support.md  quick-start.md  script-template-types.md  script-templates.md  steps.md  template-features.md  types-of-workflows.md  upgrading-from-v6.md  workflow-features.md
examples/: any_success_all_fail.py  archive-location.py  arguments-artifacts.py  arguments-parameters-from-configmap.py  arguments-parameters.py  artifact-disable-archive.py  artifact-gc-workflow.py  artifact.py  artifact_with_fanout.py  coin_flip.py  complex_expr.py  conditional.py  container.py  context.py  custom_script.py  daemon.py  default_param_overwrite.py  diamond.py  diamond_task_template.py  dynamic_fanout.py  dynamic_fanout_container.py  dynamic_fanout_fanin.py  dynamic_fanout_fanin_artifacts.py  env.py  existing_volume.py  gitops.py  global_host.py  global_parameters.py  gpu.py  hello_hera.py  hello_hera_cron.py  input_output.py  internal_wrapper.py  k8s_sa.py  linear.py  lint.py  memoize.py  metrics.py  multiple_dependencies.py  parallel_dag.py  (+21 more)
examples/old/: any_success_all_fail.py  artifact.py  complex_expr.py  daemon.py  dynamic_fanout_container.py  existing_volume.py  gitops.py  input_output.py  memoize.py  parallel_dag.py  post_init_hooks.py  retry.py  sidecar.py  sidecar_dind.py  suspend.py  workflow_template.py
examples/v5/: coinflip.py  dag-coinflip.py  suspend.py
examples/workflows/: any-success-all-fail.yaml  artifact-with-fanout.yaml  artifact.py  artifact.yaml  artifact_with_fanout.py  callable-coinflip.yaml  callable-dag-with-param-get.yaml  callable-dag.yaml  callable-script.yaml  callable-steps.yaml  callable_coinflip.py  callable_dag.py  callable_dag_with_param_get.py  callable_script.py  coinflip.py  coinflip.yaml  complex-deps.yaml  complex-expr.yaml  complex_expr.py  conditional.py  conditional.yaml  container-set-with-env.yaml  container.py  container_set_with_env.py  daemon.py  daemon.yaml  dag-conditional-on-task-status.yaml  dag-conditional-parameters.yaml  dag-diamond-with-callable-container.yaml  dag-diamond-with-callable-decorators.yaml  dag-diamond-with-callable-script.yaml  dag-with-callable-templates.yaml  dag-with-script-output-param-passing.yaml  dag-with-script-param-passing.yaml  dag_conditional_on_task_status.py  dag_diamond_with_callable_container.py  dag_diamond_with_callable_decorators.py  dag_diamond_with_callable_script.py  dag_with_callable_templates.py  dag_with_script_output_param_passing.py  (+126 more)
hep/: README.md
hep/proposals/: 0000-decorators.md  0000-template.md  0001-decorators.md
proposals/: README.md
proposals/heps/: 0000-template.md  0002-YAML-converter.md
scripts/: async_service.py  examples.py  graphlib.py  init.py  init_files.py  init_helper.py  models.py  service.py  spec.py
src/hera/: __init__.py  __main__.py  _base_model.py  _context.py  _task_input.py  _version.py  _workflow_editors.py  _yaml.py  io.py  (+57 more)
tests/: conftest.py  helper.py  test_action.py  test_affinity.py  test_archive.py  test_artifact.py  test_async_build.py  test_backoff.py  test_client.py  test_config.py  test_container_port.py  test_context.py  test_cron_workflow.py  test_cron_workflow_service.py  test_dag.py  test_decorators.py  test_env.py  test_env_from.py  test_env_spec.py  test_examples.py  test_expr.py  test_global_config.py  test_hooks.py  test_host_config.py  test_image.py  test_input.py  test_io.py  test_lifecycle.py  test_memoize.py  test_metric.py  test_output.py  test_output_references.py  test_parameter.py  test_probe.py  test_pydantic_io_syntax.py  test_pydantic_io_workflow_syntax.py  test_remaining_examples.py  test_resource_base.py  test_resource_template.py  test_resources.py  (+31 more)
(+1695 files in other folders)
