[tool.poetry]
name = "hera-workflows"
version = "3.7.0"
description="Hera is a Python framework for constructing and submitting Argo Workflows. The main goal of Hera is to make Argo Workflows more accessible by abstracting away some setup that is typically necessary for constructing Argo workflows."
authors = ["Flaviu Vadan <flaviu.vadan@dynotx.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/argoproj-labs/hera-workflows"
repository = "https://github.com/argoproj-labs/hera-workflows"
documentation = "https://github.com/argoproj-labs/hera-workflows/README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
packages = [
    { include = "hera", from = "src" }
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/argoproj-labs/hera-workflows/issues"

[tool.poetry.dependencies]
argo-workflows = {version = "6.3.5", allow-prereleases = true}
pydantic = "^1.9.0"
python = ">=3.7"
pytz = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
black = "*"
pyproject-flake8 = "*"
mypy = "*"
build = "*"
isort = "*"
tox = "<4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
target-version = ['py37']
include = '\.pyi?$'

[tool.flake8]
# do not look here for things to lint
exclude = [".git", "__init__.py"]
docstring-convention = "numpy"
max-line-length = 119

[tool.pytest.ini_options]
addopts = "-ra -q"

[tool.isort]
profile = "black"
skip_gitignore = true
skip_glob = [".venv/*", ".mypy_cache/*", ".pytest_cache/*", ".github/*", ".git/*"]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
no_implicit_optional = true
strict_optional = false

[[tool.mypy.overrides]]
module = "mypy-argo.workflows.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mypy-urllib3.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module ="mypy-pytz.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module ="mypy-pkg_resources.*"
ignore_missing_imports = true
