[tool.poetry]
name = "hera-workflows"
# The version is automatically substituted by the CI
version = "0.0.0-dev"
description = "Hera is a Python framework for constructing and submitting Argo Workflows. The main goal of Hera is to make Argo Workflows more accessible by abstracting away some setup that is typically necessary for constructing Argo workflows."
authors = ["Flaviu Vadan <flaviu.vadan@dynotx.com>", "Asgeir Berland <asgeir.berland@oda.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/argoproj-labs/hera-workflows"
repository = "https://github.com/argoproj-labs/hera-workflows"
documentation = "https://github.com/argoproj-labs/hera-workflows/README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
packages = [
    { include = "hera", from = "src" }
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/argoproj-labs/hera-workflows/issues"

[tool.poetry.dependencies]
python = ">=3.7,<4"
python-dateutil = ">=2.8.2"
urllib3 = ">=1.26.8"
certifi = ">=2021.10.8"
pytz = ">=2021.3"
pyyaml = { version = ">=6.0", optional = true }
pydantic = "^1.10.3"

[tool.poetry.extras]
yaml = ["PyYAML"]

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
black = "*"
pyproject-flake8 = "*"
mypy = "*"
build = "*"
isort = "*"
tox = "<4.0"
types-PyYAML = "*"
jsonpath-ng = "^1.5.3"


[tool.poetry.group.dev.dependencies]
datamodel-code-generator = {extras = ["http"], version = "^0.14.1"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
skip-string-normalization = false
target-version = ['py37']
include = '\.pyi?$'
verbose = true

[tool.flake8]
# do not look here for things to lint
exclude = [".git", "__init__.py", "src/hera/models"]
docstring-convention = "numpy"
max-line-length = 119

[tool.pytest.ini_options]
addopts = "-ra -q"
filterwarnings = [
    # Hide the hera.host_config deprecations
    'ignore:.*is deprecated in favor of `global_config.GlobalConfig',
]

[tool.isort]
known_first_party = ["hera"]
profile = "black"
skip_gitignore = true
skip_glob = [".venv/*", ".mypy_cache/*", ".pytest_cache/*", ".github/*", ".git/*"]

[tool.mypy]
show_traceback = true
namespace_packages = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = false
explicit_package_bases = true
show_error_codes = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "mypy-urllib3.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mypy-pytz.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mypy-pkg_resources.*"
ignore_missing_imports = true
